testcases/compiler2015/Phase2/CompileError/naive11-5100379071-puyouer.c
/*
 * naive
 */
struct A {
    int a;
};

int main() {
    struct A a, b, c;
    c = a + b;
    return 0;
}
